调整function tool的获取方式