@@ -1,19 +1,20 @@
 package com.github.hambuger.memory.chat.memory.functionCall;
 
 import com.alibaba.fastjson.JSON;
+import com.github.hambuger.memory.chat.memory.chat.dto.ChatSceneEnum;
 import com.github.hambuger.memory.chat.memory.constants.CommonConstants;
 
+import org.springframework.ai.openai.api.OpenAiApi;
+
+import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 
-import dev.langchain4j.agent.tool.ToolSpecification;
 import lombok.AllArgsConstructor;
 import lombok.Data;
-
-import static com.github.hambuger.memory.chat.memory.constants.MemoryChatConstants.REPLY_MESSAGE_FUNCTION_NAME;
 
 
 /**
@@ -33,31 +34,33 @@ public class CallFunctionRegistryFactory {
     }
 
 
-    public static volatile ConcurrentHashMap<String, ToolSpecification> FUNCTION_CALL_METHOD_USER_MAP = new ConcurrentHashMap<>();
-
-    public static volatile ConcurrentHashMap<String, ToolSpecification> FUNCTION_CALL_METHOD_GROUP_MAP = new ConcurrentHashMap<>();
+    public static volatile ConcurrentHashMap<String, FunctionTool> FUNCTION_CALL_METHOD_MAP = new ConcurrentHashMap<>();
 
     public static volatile ConcurrentHashMap<String, MethodFunction> FUNCTION_CALL_MAP = new ConcurrentHashMap<>();
 
 
-    public static boolean registryUserFunction(ToolSpecification toolSpecification, Class argClass, Function function) {
-        FUNCTION_CALL_METHOD_USER_MAP.put(toolSpecification.name(), toolSpecification);
-        FUNCTION_CALL_MAP.put(toolSpecification.name(), new MethodFunction(argClass, function));
+    public static boolean registryFunction(FunctionTool functionTool, Class argClass, Function function) {
+        if (functionTool == null) {
+            return false;
+        }
+        OpenAiApi.FunctionTool toolSpecification = functionTool.getFunctionTool();
+        FUNCTION_CALL_METHOD_MAP.put(toolSpecification.function().name(), functionTool);
+        FUNCTION_CALL_MAP.put(toolSpecification.function().name(), new MethodFunction(argClass, function));
         return true;
     }
 
 
-    public static boolean registryGroupFunction(ToolSpecification toolSpecification, Class argClass, Function function) {
-        FUNCTION_CALL_METHOD_GROUP_MAP.put(toolSpecification.name(), toolSpecification);
-        FUNCTION_CALL_MAP.put(toolSpecification.name(), new MethodFunction(argClass, function));
-        return true;
-    }
-
-
-    public static List<ToolSpecification> getAllFunctionCall(boolean groupFlag, boolean scheduleFlag) {
-        if (scheduleFlag)
-            return FUNCTION_CALL_METHOD_USER_MAP.values().stream().filter(method -> method.name().equals(REPLY_MESSAGE_FUNCTION_NAME)).collect(Collectors.toList());
-        return (groupFlag ? FUNCTION_CALL_METHOD_GROUP_MAP : FUNCTION_CALL_METHOD_USER_MAP).values().stream().toList();
+    public static List<OpenAiApi.FunctionTool> getAllFunctionCall(boolean groupFlag, ChatSceneEnum scene) {
+        return FUNCTION_CALL_METHOD_MAP.values().stream().filter(tool -> {
+            boolean sceneFlag = true;
+            if (!Arrays.stream(tool.getScene()).collect(Collectors.toSet()).contains(scene)) {
+                sceneFlag = false;
+            }
+            if (groupFlag && !Arrays.stream(tool.getScene()).collect(Collectors.toSet()).contains(ChatSceneEnum.NORMAL_GROUP)) {
+                sceneFlag = false;
+            }
+            return sceneFlag;
+        }).map(FunctionTool::getFunctionTool).collect(Collectors.toList());
     }
 
 
